tests/NormalTests/paczka1/small_fuzzy/55121626.err
Error in line 2: 4Frxl A821 12,4
Error in line 6: T1kDYTa A59 50,5
